fx no 10 - adding & remove item

--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1084,8 +1084,8 @@
                                   being specific and listing each item
                                   separately.
                                 </p>
-                                <div class="pb-24">
-                                  <div class="_1sxghm1">
+                                <div class="pb-24 parent-guest">
+                                  <div class="_1d5136v">
                                     <div class="spinner-chart__input-price">
                                       <label
                                         class="input-field"
@@ -1139,7 +1139,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1sxghm1">
+                                  <div class="_1d5136v">
                                     <div class="spinner-chart__input-price">
                                       <label
                                         class="input-field"
@@ -1274,6 +1274,36 @@
     <div id="authModals"></div>
     <div>
       <iframe style="display: none"></iframe>
+    </div>
+
+    <div class="hidden input-el">
+      <div class="_1d5136v">
+        <div class="_1jj61m9">
+         <label class="_1yw7hpv" for="packing-item-6">
+          <div class="_1m2ich98"><div class="_11hx67x">Item</div></div>
+          <div dir="ltr">
+           <div class="_fywymp7"><input data-testid="packing-item-6" class="_yrzsibu" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
+          </div>
+         </label>
+         <div class="_129y4gf">
+          <button data-testid="delete-input-button" aria-label="Delete dsada" type="button" class="btn-close">
+           <span class="_e296pg">
+            <svg
+             viewBox="0 0 32 32"
+             xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true"
+             role="presentation"
+             focusable="false"
+             style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"
+            >
+             <path d="m6 6 20 20"></path>
+             <path d="m26 6-20 20"></path>
+            </svg>
+           </span>
+          </button>
+         </div>
+        </div>
+       </div>
     </div>
   </body>
   <script src="../assets/js/pages/manage-listing.js"></script>
