fx no 17 - A - add modals

--- a/submission/review.html
+++ b/submission/review.html
@@ -1073,7 +1073,7 @@
                                   </svg>
                                   <div class="_auvwd9">
                                     <div
-                                      id="disclosure-action-row"
+                                      id="open-modal-laws"
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
@@ -1145,7 +1145,7 @@
                                   </svg>
                                   <div class="_auvwd9">
                                     <div
-                                      id="disclosure-action-row"
+                                      id="open-modal-tour"
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
@@ -1217,7 +1217,7 @@
                                   </svg>
                                   <div class="_auvwd9">
                                     <div
-                                      id="disclosure-action-row"
+                                      id="open-modal-animals"
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
@@ -1452,6 +1452,198 @@
     <div>
       <iframe style="display: none"></iframe>
     </div>
-  </body>
+
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden laws-backdrop"></div>
+      <section>
+       <div class="_vxvq8x hidden modal-container-laws" data-testid="modal-container" style="align-items: center !important;">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="Local laws" aria-modal="true" class="modal-laws _1ucy1zjv" style="position: relative;">
+           <div class="_pa35zs">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-laws">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <div class="_1tv8hmo"></div>
+           <div class="_12kfhdn">
+            <div class="_1ph2xfp">
+             <div class="_w99wiq">
+              <section>
+               <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_gca4re">Local laws</span></h2>
+               <div class="_g86r3e">
+                <p class="_1mm0shk">
+                 Learn about <a href="/help/topic/896/responsible-hosting-for-airbnb-experiences" target="_blank"><span class="_1dsb80r">responsible hosting for Airbnb Experiences</span></a>.
+                </p>
+                <li>Your experience must comply with all applicable local laws (ex: business licensing, travel-related experiences, etc.).</li>
+               </div>
+              </section>
+             </div>
+            </div>
+           </div>
+           <footer class="_zgc1p6">
+            <div class="_qboyil"><button type="button" class="_1ku51f04">Done</button></div>
+           </footer>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden tour-backdrop"></div>
+      <section>
+       <div class="_vxvq8x hidden modal-container-tour" data-testid="modal-container" style="align-items: center !important;">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="Tour guiding" aria-modal="true" class="modal-tour _1ucy1zjv" style="position: relative;">
+           <div class="_pa35zs">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-tour">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <div class="_1tv8hmo"></div>
+           <div class="_12kfhdn">
+            <div class="_1ph2xfp">
+             <div class="_w99wiq">
+              <section>
+               <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_gca4re">Tour guiding</span></h2>
+               <div class="_g86r3e">
+                <p class="_1mm0shk">
+                 Learn about <a href="/help/article/2255/tour-guiding-and-travelrelated-experiences" target="_blank"><span class="_1dsb80r">tour guiding and travel-related experiences</span></a>.
+                </p>
+                <p class="_1mm0shk"></p>
+                <li>Your experience must follow all local tourism laws and location requirements.</li>
+                <p></p>
+                <li>Providing regulated tour guiding or tourist services may require licenses, permits, or other permissions.</li>
+               </div>
+              </section>
+             </div>
+            </div>
+           </div>
+           <footer class="_zgc1p6">
+            <div class="_qboyil"><button type="button" class="_1ku51f04">Done</button></div>
+           </footer>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+    
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden animals-backdrop"></div>
+      <section>
+       <div class="_vxvq8x hidden modal-container-animals" data-testid="modal-container" style="align-items: center !important;">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="Animals" aria-modal="true" class="modal-animals _1ucy1zjv" style="position: relative;">
+           <div class="_pa35zs">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-animals">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <div class="_1tv8hmo"></div>
+           <div class="_12kfhdn">
+            <div class="_1ph2xfp">
+             <div class="_w99wiq">
+              <section>
+               <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><span class="_gca4re">Animals</span></h2>
+               <div class="_g86r3e">
+                <p class="_1mm0shk">
+                 Experiences must follow all animal safety and <a href="/help/article/2578/what-are-the-animal-welfare-guidelines-for-airbnb-experiences" target="_blank"><span class="_1dsb80r">animal welfare guidelines</span></a>.
+                </p>
+                Prohibited activities include:
+                <p class="_1mm0shk"></p>
+                <li>Direct contact with wild animals in the wild or in captivity (ex: petting, feeding, or riding)</li>
+                <p></p>
+                <p class="_1mm0shk"></p>
+                <li>Elephant or big cat interactions</li>
+                <p></p>
+                <p class="_1mm0shk"></p>
+                <li>Wild animals in restaurants, cafes, or entertainment venues</li>
+                <p></p>
+                <p class="_1mm0shk"></p>
+                <li>Marine mammals in captivity</li>
+                <p></p>
+                <p class="_1mm0shk"></p>
+                <li>Wildlife products</li>
+                <p></p>
+                <p class="_1mm0shk"></p>
+                <li>Certain sporting events involving animals</li>
+                <p></p>
+                <li>Overworking or overloading a working animal</li>
+                <p class="_1mm0shk">Participants must be required to conduct themselves in a manner that ensures the safety of themselves, the animals, and others, including maintaining a safe and respectful distance from wild animals.</p>
+               </div>
+              </section>
+             </div>
+            </div>
+           </div>
+           <footer class="_zgc1p6">
+            <div class="_qboyil"><button type="button" class="_1ku51f04">Done</button></div>
+           </footer>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+    </body>
   <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
