fx no 19 - add modals

--- a/submission/title.html
+++ b/submission/title.html
@@ -1085,7 +1085,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                                   >
                                 </div>
                                 <div class="_63wpx2">
-                                  <button type="button" class="btn-link-condensed">
+                                  <button type="button" class="btn-link-condensed" id="open-modal-example" >
                                     Show examples
                                   </button>
                                 </div>
@@ -1191,6 +1191,130 @@ Lorem Ipsum is simply dummy text of the printing</textarea
     <div>
       <iframe style="display: none"></iframe>
     </div>
+
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden example-backdrop"></div>
+      <section>
+       <div class="_vxvq8x hidden modal-container-example" data-testid="modal-container" style="align-items: center !important;">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="Examples" aria-modal="true" class="modal-example _1ucy1zjv" style="position: relative;">
+           <div class="_pa35zs">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-example">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <div
+            class="_z4lmgp"
+            style="--gp-padding-xsmallAndAbove: 24px; --gp-padding-smallAndAbove: 24px; --gp-padding-mediumAndAbove: 24px; --gp-padding-mediumPlusAndAbove: 24px; --gp-padding-largeAndAbove: 24px; --gp-padding-xlargeAndAbove: 24px;"
+           >
+            <div class="_10toigd">
+             <div style="--gp-section-max-width: 1120px;">
+              <div data-plugin-in-point-id="EXAMPLES_MODAL_WIDE" data-section-id="EXAMPLES_MODAL_WIDE">
+               <header class="_1b0cy6g">
+                <div class="_1tng6ym"></div>
+                <div class="_9t7ktw">
+                 <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Examples</div></h1>
+                </div>
+                <div class="_rrmdgl"></div>
+               </header>
+               <div class="_12kfhdn">
+                <ul class="_qr4oq3">
+                 <li class="_1bwncnd">
+                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                   <img
+                    class="_9ofhsl"
+                    aria-hidden="true"
+                    alt="Image of a group of runners"
+                    elementtiming="LCP-target"
+                    src="https://a0.muscache.com/im/pictures/94e4e574-d8c2-4fea-9f34-e238e20aa313.jpg?im_w=240"
+                    data-original-uri="https://a0.muscache.com/im/pictures/94e4e574-d8c2-4fea-9f34-e238e20aa313.jpg?im_w=240"
+                    style="object-fit: cover; vertical-align: bottom;"
+                   />
+                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/94e4e574-d8c2-4fea-9f34-e238e20aa313.jpg?im_w=240'); background-size: cover;"></div>
+                  </div>
+                  <div class="_51dwk2">Trail run through beautiful Jeju Island</div>
+                 </li>
+                 <li class="_1bwncnd">
+                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                   <img
+                    class="_9ofhsl"
+                    aria-hidden="true"
+                    alt="Image of a group of people cooking"
+                    elementtiming="LCP-target"
+                    src="https://a0.muscache.com/im/pictures/b4500efa-3949-41a4-89b8-598e9880fb68.jpg?im_w=240"
+                    data-original-uri="https://a0.muscache.com/im/pictures/b4500efa-3949-41a4-89b8-598e9880fb68.jpg?im_w=240"
+                    style="object-fit: cover; vertical-align: bottom;"
+                   />
+                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/b4500efa-3949-41a4-89b8-598e9880fb68.jpg?im_w=240'); background-size: cover;"></div>
+                  </div>
+                  <div class="_51dwk2">Making pasta by hand with the grandmas</div>
+                 </li>
+                 <li class="_1bwncnd">
+                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                   <img
+                    class="_9ofhsl"
+                    aria-hidden="true"
+                    alt="Image of penguins"
+                    elementtiming="LCP-target"
+                    src="https://a0.muscache.com/im/pictures/c23196f9-7443-4c6d-ba87-e1abdd5f35ad.jpg?im_w=240"
+                    data-original-uri="https://a0.muscache.com/im/pictures/c23196f9-7443-4c6d-ba87-e1abdd5f35ad.jpg?im_w=240"
+                    style="object-fit: cover; vertical-align: bottom;"
+                   />
+                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/c23196f9-7443-4c6d-ba87-e1abdd5f35ad.jpg?im_w=240'); background-size: cover;"></div>
+                  </div>
+                  <div class="_51dwk2">Penguin walk with a conservationist</div>
+                 </li>
+                 <li class="_1bwncnd">
+                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a woman smiling while playing guitar" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                   <img
+                    class="_9ofhsl"
+                    aria-hidden="true"
+                    alt="Image of a woman smiling while playing guitar"
+                    elementtiming="LCP-target"
+                    src="https://a0.muscache.com/im/pictures/bbffdc9d-ecbb-4bdc-b97d-e4f410b051c3.jpg?im_w=240"
+                    data-original-uri="https://a0.muscache.com/im/pictures/bbffdc9d-ecbb-4bdc-b97d-e4f410b051c3.jpg?im_w=240"
+                    style="object-fit: cover; vertical-align: bottom;"
+                   />
+                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/bbffdc9d-ecbb-4bdc-b97d-e4f410b051c3.jpg?im_w=240'); background-size: cover;"></div>
+                  </div>
+                  <div class="_51dwk2">Songwriting with a Nashville musician</div>
+                 </li>
+                </ul>
+               </div>
+               <footer class="_coqiui">
+                <div class="_dt638"><button type="button" class="_1ku51f04">Close</button></div>
+               </footer>
+               <span id="FMP-target"></span>
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+     
   </body>
   <script src="../assets/js/pages/manage-listing.js"></script>
 </html>
