fx all bugs from no 23

--- a/edit/what.html
+++ b/edit/what.html
@@ -872,15 +872,15 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                     data-testid="CONCEPT_REFINEMENT_0-disclosure-row"
                                                     type="button"
                                                     class="_u1thwpg"
+                                                    id="open-modal-options-m"
                                                   >
                                                     <span class="account-container-mb__menu-btn-wrapper">
                                                       <div
-                                                        id="CONCEPT_REFINEMENT_0-disclosure-row-row-title"
                                                         class="_gw4xx4"
                                                       >
                                                         Dish
                                                       </div>
-                                                      <span class="account-container-mb__menu-arrow" id="open-modal-options-m">
+                                                      <span class="account-container-mb__menu-arrow">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -1458,6 +1458,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 data-testid="CONCEPT_REFINEMENT_0-disclosure-row"
                                                 type="button"
                                                 class="account-container-mb__menu-btn"
+                                                id="open-modal-options"
                                               >
                                                 <span
                                                   class="account-container-mb__menu-btn-wrapper"
@@ -1470,7 +1471,6 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                   </div>
                                                   <span
                                                     class="account-container-mb__menu-arrow"
-                                                    id="open-modal-options"
                                                   >
                                                     <svg
                                                       viewBox="0 0 32 32"
@@ -3972,9 +3972,9 @@ Join me in this fun and easy cooking experience where you will learn techniques 
      </div>
 
      <div dir="ltr">
-      <div class="_1t0jy5tw examples-backdrop"></div>
+      <div class="_1t0jy5tw hidden examples-backdrop"></div>
       <section>
-       <div class="_vxvq8x modal-container-examples" data-testid="modal-container">
+       <div class="_vxvq8x hidden modal-container-examples" data-testid="modal-container">
         <div class="_z4lmgp">
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
          <div class="_z4lmgp">
