--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4424,6 +4424,59 @@
                                                                 nights
                                                               </div>
                                                             </button>
+
+                                                              <!-- style="
+                                                                position: absolute;
+                                                                top: calc(100% + 10px);
+                                                                right: 0;
+                                                                z-index: 9999;
+                                                              " -->
+
+                                                            <!-- popover -->
+                                                            <div
+                                                              role="dialog"
+                                                              aria-label="Price breakdown"
+                                                              aria-modal="true"
+                                                              class="_ewwxwe popover-animate"
+                                                              style="
+                                                                position: absolute;
+                                                                top: calc(100% + 10px);
+                                                                right: 0;
+                                                                z-index: 9999;
+                                                              "
+                                                            >
+                                                              <div class="_1wv4knt">
+                                                                <button aria-label="Close" type="button" class="_oda838">
+                                                                  <span class="_e296pg"
+                                                                    ><svg
+                                                                      viewBox="0 0 32 32"
+                                                                      xmlns="http://www.w3.org/2000/svg"
+                                                                      aria-hidden="true"
+                                                                      role="presentation"
+                                                                      focusable="false"
+                                                                      style="
+                                                                        display: block;
+                                                                        fill: none;
+                                                                        height: 16px;
+                                                                        width: 16px;
+                                                                        stroke: currentcolor;
+                                                                        stroke-width: 3;
+                                                                        overflow: visible;
+                                                                      "
+                                                                    >
+                                                                      <path d="m6 6 20 20"></path>
+                                                                      <path d="m26 6-20 20"></path></svg
+                                                                  ></span>
+                                                                </button>
+                                                              </div>
+                                                              <div class="_12kfhdn">
+                                                                <div class="_11vbjbm">
+                                                                  <div class="_1875dx">
+                                                                    <div class="_l6x7wk">Average nightly rate is rounded.</div>
+                                                                  </div>
+                                                                </div>
+                                                              </div>
+                                                            </div>
                                                           </div>
                                                           <div
                                                             data-testid="price-item-ACCOMMODATION"
@@ -4443,6 +4496,7 @@
                                                         >
                                                           <div
                                                             class="confirm-pay__price-wrapper"
+                                                            style="position: relative;"
                                                           >
                                                             <button
                                                               type="button"
@@ -4454,6 +4508,8 @@
                                                                 Service fee
                                                               </div>
                                                             </button>
+
+                                                            <!-- popover -->
                                                           </div>
                                                           <div
                                                             data-testid="price-item-AIRBNB_GUEST_FEE"
@@ -8332,6 +8388,7 @@
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
 
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/payment.js"></script>
