fix aircover alignment

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -530,12 +530,12 @@
                                               "
                                             >
                                               <div
-                                                class="text-sm"
+                                                class="text-sm flex"
                                                 role="img"
                                                 aria-label="Your booking is protected by AirCover"
                                               >
                                                 Your booking is protected by
-                                                <div class="_1p752y2">
+                                                <div class="_1p752y2" style="margin-left: 3px;">
                                                   <img
                                                     class="_hx27jd"
                                                     src="https://a0.muscache.com/pictures/aircover/aircover-logo/original/56683a2f-f11b-43f6-8af7-a1b3861b2c85.svg"
