add cancellation policy modal

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4693,6 +4693,7 @@
                                                   <button
                                                     type="button"
                                                     class="btn-link-condensed"
+                                                    data-modal="#cancellation-policy-modal"
                                                   >
                                                     Learn more
                                                   </button>
@@ -10435,6 +10436,108 @@
       </div>
     </div>
 
+    <!-- cancellation policy -->
+    <div dir="ltr" class="hidden" id="cancellation-policy-modal">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div class="modal__container" data-testid="modal-container">
+          <div class="contents">
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+            <div class="contents">
+              <div role="dialog" aria-label="Add card details" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative">
+                <div class="modal__close">
+                  <button aria-label="Close" type="button" class="btn-close" data-button="close">
+                    <span class="relative">
+                      <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
+                          display: block;
+                          fill: none;
+                          height: 16px;
+                          width: 16px;
+                          stroke: currentcolor;
+                          stroke-width: 3;
+                          overflow: visible;
+                        ">
+                        <path d="m6 6 20 20"></path>
+                        <path d="m26 6-20 20"></path>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+                <header class="modal__header-container" style="border-bottom: 0;"></header>
+                <div class="modal__body">
+
+<section>
+  <div class="_v1m4jk">
+    <div class="_rjfnlo">
+      <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+        Cancellation policy
+      </h2>
+    </div>
+  </div>
+  <div>
+    <div class="_o26o64">
+      <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+        Cancel by
+      </h3>
+    </div>
+  </div>
+  <div class="_1cnosla">
+    <span class="a8jt5op dir dir-ltr"
+      >Cancel by November 11 at 10:00 AM and you'll get a No refund.</span
+    >
+    <div aria-hidden="true">
+      <div class="_dj903s">
+        <div class="_v0q64e7">
+          <div class="_68scml">48 hours</div>
+          <div class="_1r0bq6e">after booking</div>
+        </div>
+        <div class="_96puxn7"><div class="_4gelgl">Full refund: Get back 100% of what you paid.</div></div>
+      </div>
+    </div>
+  </div>
+  <div class="_1cnosla">
+    <span class="a8jt5op dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
+    <div aria-hidden="true">
+      <div class="_dj903s">
+        <div class="_v0q64e7">
+          <div class="_68scml">Nov 9</div>
+          <div class="_1r0bq6e">2:00 PM</div>
+        </div>
+        <div class="_96puxn7"><div class="_4gelgl">Partial refund: Get back 50% of every night. No refund of the service fee.</div></div>
+      </div>
+    </div>
+  </div>
+  <div class="_1cnosla">
+    <span class="a8jt5op dir dir-ltr">Cancel by November 11 at 10:00 AM and you'll get a No refund.</span>
+    <div aria-hidden="true">
+      <div class="_dj903s">
+        <div class="_v0q64e7">
+          <div class="_68scml">Nov 16</div>
+          <div class="_1r0bq6e">2:00 PM</div>
+          <div class="_1r0bq6e">(check-in)</div>
+        </div>
+        <div class="_96puxn7"><div class="_4gelgl">No refund</div></div>
+      </div>
+    </div>
+  </div>
+  <div class="_nt5bsb">
+    <a target="_blank" href="/help/article/2637" class="_1sikdxcl"
+      >Learn more about cancellation policies</a
+    >
+  </div>
+</section>
+                </div>
+              </div>
+            </div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
 
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/payment.js"></script>
