--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4738,6 +4738,7 @@
                                                     class="_1hyxfz6"
                                                     role="button"
                                                     tabindex="0"
+                                                    data-modal="#house-rules-modal"
                                                   >
                                                     Host's House Rules
                                                   </span>
@@ -10526,6 +10527,175 @@
     >
   </div>
 </section>
+                </div>
+              </div>
+            </div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+    <!-- house rules modal -->
+    <div dir="ltr" class="hidden" id="house-rules-modal">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div class="modal__container" data-testid="modal-container">
+          <div class="contents">
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+            <div class="contents">
+              <div role="dialog" aria-label="Add card details" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative">
+                <div class="modal__close">
+                  <button aria-label="Close" type="button" class="btn-close" data-button="close">
+                    <span class="relative">
+                      <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
+                          display: block;
+                          fill: none;
+                          height: 16px;
+                          width: 16px;
+                          stroke: currentcolor;
+                          stroke-width: 3;
+                          overflow: visible;
+                        ">
+                        <path d="m6 6 20 20"></path>
+                        <path d="m26 6-20 20"></path>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+                <header class="modal__header-container">
+                  <div class="modal__header-wrapper"></div>
+                  <div class="modal__heading">
+                    <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
+                      <div class="modal__header-text">
+                        <div class="_ycllv4">House rules</div>
+                      </div>
+                    </h1>
+                  </div>
+                  <div class="modal__heading-wrapper"></div>
+                </header>
+                <div class="modal__body">
+
+<div class="_1uvwwwt">
+  <div class="_1ou8uzt">
+    <ul class="_10cqbup">
+      <li class="_irhzzc">
+        <div class="_1eaes69">
+          <svg
+            viewBox="0 0 24 24"
+            role="presentation"
+            aria-hidden="true"
+            focusable="false"
+            style="
+              height: 20px;
+              width: 20px;
+              display: block;
+              fill: currentcolor;
+            "
+          >
+            <path
+              d="m11.4 10.7c1.1 0 1.9-.9 1.9-1.9s-.9-1.9-1.9-1.9-1.9.9-1.9 1.9.9 1.9 1.9 1.9zm4.9 2v1.3c0 .2-.1.3-.3.3s-.3-.1-.3-.3v-1.3h-1.4c-.3 0-.5.2-.5.5v6c0 .5-.4.8-.8.8-.5 0-.8-.4-.8-.8v-1.9c0-.3-.2-.5-.5-.5h-.2c-.3 0-.5.2-.5.5v1.9c0 .5-.4.8-.8.8-.5 0-.8-.4-.8-.8v-3-3.1c0-.4-.2-.7-.5-.9l-2.2-1.3c-.4-.2-.5-.7-.3-1.1s.7-.5 1.1-.3l1.8 1c.6.4 1.4.6 2.1.6h4.6v-3c-1.2-1.1-1.8-2.1-1.8-3 0-1.1.9-2.1 2.1-2.1s2.1.9 2.1 2.1c0 .9-.6 1.9-1.8 3v3c.4 0 .8.4.8.8s-.3.8-.8.8zm-.1-8.7c-.6.2.2.7.4 1.5s-.4 1.3 0 1.2.8-.9.7-1.6-.5-1.2-1.1-1z"
+            ></path>
+          </svg>
+        </div>
+        <div class="_gg3jno">
+          <span>Suitable for children and infants</span>
+        </div>
+      </li>
+      <li class="_irhzzc">
+        <div class="_1eaes69">
+          <svg
+            viewBox="0 0 24 24"
+            role="presentation"
+            aria-hidden="true"
+            focusable="false"
+            style="
+              height: 20px;
+              width: 20px;
+              display: block;
+              fill: currentcolor;
+            "
+          >
+            <path
+              d="m6.32874849 11.6781574c.75542549 0 1.34774775-.5410186 1.34774775-1.5525901 0-.82366353-.59232226-2.99008648-2.1195616-2.99008648-.91618752 0-1.67395421.77433766-1.67395421 1.68569158 0 1.12509931 1.30014346 2.856985 2.44576806 2.856985m12.63854941-4.52701758-2.1484364 2.15546165c-.0741378.29595514-.1131577.58016603-.1131577.81896583 0 1.0115715.5923223 1.5525901 1.3485281 1.5525901 1.1979113 0 2.4457681-1.8039171 2.4457681-2.85463615 0-.86202807-.6797269-1.59721822-1.5327021-1.67238143m-3.9456935 3.95859578-8.40176737 8.4292409c.37381076.7351901 1.01139611 1.2190533 2.0337178 1.2190533 1.63337347 0 2.50039597-1.4727292 3.31044927-1.569032 1.0956792-.1299698 1.8339359 1.8109636 3.6990877 1.8109636 1.9018304 0 2.5269294-1.7154437 2.5269294-3.6297567 0-2.6510691-1.1979113-5.0735168-3.1684168-6.2604691m-4.869685-1.67238146c1.0652436 0 1.3813049-1.55493892 1.3813049-2.59469666 0-1.45237246-.5267688-2.75363554-1.90651288-2.75363554-.93491708 0-1.82144947.7281436-1.82144947 1.93623562 0 1.12353341 1.11128708 3.41209658 2.34665745 3.41209658m9.3031274-4.43462942-14.95633216 15.00445588c-.11393814.1143107-.2637746.1714661-.41361107.1714661-.14983646 0-.29967292-.0571554-.41361106-.1714661-.22865668-.2294044-.22865668-.6013057 0-.83071l2.56829059-2.5766889c.31528088-3.0887381 2.37319102-6.2589031 6.0067252-6.2589031.0741378 0 .1428129.0140931.2153899.0164419l1.1479658-1.15093664c-.5704711-.46663827-.7608883-1.56041957-.7608883-2.36059458 0-1.45158951.5244276-2.75676734 1.9072933-2.75676734.8880932 0 1.8198887.69134495 1.8198887 1.93232087 0 .06811666-.0046824.14327987-.0140472.22314078l2.0649337-2.07246894c.2286567-.22940438.5993459-.22940438.8280026 0 .2286566.22940438.2286566.60130568 0 .83071007"
+            ></path>
+          </svg>
+        </div>
+        <div class="_gg3jno"><span>No pets</span></div>
+      </li>
+      <li class="_irhzzc">
+        <div class="_1eaes69">
+          <svg
+            viewBox="0 0 24 24"
+            role="presentation"
+            aria-hidden="true"
+            focusable="false"
+            style="
+              height: 20px;
+              width: 20px;
+              display: block;
+              fill: currentcolor;
+            "
+          >
+            <path
+              d="m19.2824314 18.7231393c.0580699.2873308-.1238824.5683982-.4080378.6278999l-3.0614452.6380779c-.2841554.0587188-.5621167-.1260497-.6209608-.4125976-.0518758-.2536653.0851692-.5088964.3244171-.6028466.4242975-.1675443.9507979-.3202133.8586603-.7711738l-.7371006-3.6162966c0-.0007829 0-.0015659-.0007743-.0015659-.0766522-.3640567-.2965436-.4893235-.481593-.5543057-.9012449-.274804-1.4966549-.9700349-1.8435258-1.8547319-.0394876-.1009963-.0712324-.2145194-.1083972-.3186474l4.3838905-4.43209681c.2632502 1.21900277.4862386 2.56248945.5226291 3.74860971.0309706.9363695-.2369252 1.8038422-.942281 2.4231301-.1672413.1511031-.3228686.3554446-.2477649.7249817l.7378749 3.6131649c.0913633.4493948.6372204.3812809 1.0909399.3648397.2562818-.010178.4815931.1698931.5334688.4235584m-10.22727104.7719568c-.05884417.2881137-.33680543.4728823-.62096082.4141634l-2.64721325-.5519569 2.30885929-2.3354433-.22453695 1.0999992c-.09136331.4517435.43513713.6044125.86020881.7719568.23847373.0939502.37474443.3483984.32364292.6012808m3.06144524-12.16419143c.0960089.60284659.2206656 1.26362908.367776 1.93302366l-.9748001.98569327c.2578304-.99195661.4622365-2.01522997.6070241-2.91871693m7.2138303-4.15885852c-.2268598-.22939487-.5946358-.22939487-.8214956 0l-1.5918895 1.60967868c-.1231082-.42825595-.2253112-.75786428-.2833811-.94263285-.0309707-.09629887-.1285281-.15423477-.2268598-.13387891l-4.0904439.85416315-4.47602798-.93402075c-.0983317-.02113878-.19666341.03679713-.22685975.13387891-.26325022.82832687-1.38980632 4.52369815-1.4772983 7.33280662-.03097062.9340208.23847373 1.8054081.9430552 2.424696.16724132.1503202.32286865.3546617.24776491.7241988l-.06194122.3006404-3.59491405 3.6350866c-.22685975.2293949-.22685975.6004978 0 .8298927.11381701.1150889.26247596.1722419.41113491.1722419.14865894 0 .29654363-.057153.41036063-.1722419l14.83879555-15.00383373c.2260855-.22939487.2260855-.60128075 0-.83067562"
+            ></path>
+          </svg>
+        </div>
+        <div class="_gg3jno"><span>No parties or events</span></div>
+      </li>
+      <li class="_irhzzc">
+        <div class="_1eaes69">
+          <svg
+            viewBox="0 0 24 24"
+            role="presentation"
+            aria-hidden="true"
+            focusable="false"
+            style="
+              height: 20px;
+              width: 20px;
+              display: block;
+              fill: currentcolor;
+            "
+          >
+            <path
+              d="m4.50336409 19.0040004c-.00078342.0015657-.00313367.0015657-.00470051.0031313l-.00470052.0046968s-.00078342 0-.00078342-.0007828c-.11359577.1080272-.25931174.165172-.4050277.165172-.15041648 0-.30083296-.0579276-.41599558-.1722173-.22954181-.2293621-.22954181-.6011949 0-.830557l.29456561-.294335-.01645181-2.8055764c-.00156683-.4344572.36272308-.7225298.70977777-.7248782l2.85791311-.0172218 6.46007446-6.45501741c-.0195855-.03522626-.0321202-.08141181-.0564062-.11037563-.2311087-.26928523-.4692681-.29042099-1.274623-.2262309-.6000991.04618554-1.3490478.10333037-2.0846784-.21605443-2.20532494-.96285126-2.1630203-3.12339554-2.14421824-4.0478893.00078341-.04618555.00235025-.0790634.00235025-.1189865.00783419-.04148871.03917096-.07436656.0814756-.07436656h2.10974779c.0446549 0 .0861761.03679188.0830424.10019915-.0070507 1.0340866-.0329036 1.6853811.7732348 2.03607815.2162236.09471951.5985322.0665385 1.0051267.03522626.8507933-.06732131 2.1371675-.16125801 3.1438612.98476982l3.0694362-3.06703351c.2295419-.22936213.601666-.22936213.8312078 0s.2295418.60119493 0 .83055706zm15.99663591-7.7161177v1.8975215c0 .10881-.0877429.1972671-.1958548.1972671-.2655791 0-1.6702496.0007828-1.9060588.0007828-1.0059102 0-3.033399-.0939367-3.9547-2.1401913-.0571896-.1275974-.0869595-.258326-.1237802-.3882718l2.1042639-2.10418222c.0023502.15734399.0031337.31077394.0015668.45715865-.0023502.25519472-.0117513.85717247.0908767 1.08966577.3055334.6779099.9024988.7796747 2.0235717.7929824h1.7642599c.1081119 0 .1958548.0884571.1958548.1972671zm-4.3088054 7.2049455-.0156684-2.7758297 2.8774986-.0133077.0125347 2.7758297zm4.283736-3.5187125c-.0023503-.395317-.3227687-.7154846-.7199622-.7154846l-8.8957246.0532308-5.69310709 5.6878676 14.62408549-.0023484c.4261801-.0093936.7113446-.3483486.7089944-.7240954l-.0086176-1.661897z"
+            ></path>
+          </svg>
+        </div>
+        <div class="_gg3jno"><span>No smoking</span></div>
+      </li>
+    </ul>
+  </div>
+  <h2 class="_1y5ik42">Additional rules</h2>
+  <div class="_1amtsfs">Dear guests, thank you very much for looking after this home and respecting the house rules.
+
+Please answer the pre-booking message truthfully at the time of booking. This is to help us get to know you to ensure the space suits your needs. Any misrepresentation may result in immediate cancellation or eviction.
+
+During your stay in my listing, I require that you are aware of and agree to abide by the NSW Government’s Code of Conduct for the Short-term Rental Accommodation Industry. In abiding with the Code of Conduct, you are also agreeing to the following rules.
+
+We have a strict no party policy. Do not host parties or events that would disrupt the peace and comfort of my home. This is a quiet neighbourhood; please respect our neighbours and limit noise between 10:30 PM and 7:30 AM. Due to new Airbnb restrictions, noise complaints can result in a $550 on the spot fine.
+
+Intimate gatherings among guests are allowed, but no extra guests are to be bought onto the property without prior approval
+
+Kindly observe the 10 am check-out time so our cleaners have enough time to thoroughly and safely prepare the space for the next guest in line with Airbnb’s enhanced cleaning standards.
+
+Please leave the home neat &amp; tidy. We may need to charge guests for additional housekeeping time if our team is required to stay longer.
+
+There is strictly no smoking inside. *If smoking occurs in the property, we will have to charge guests to have the furnishings and carpet deodorised.
+
+We understand that accidents happen. If you happen to accidentally break or damage something, please let us know. Depending on the damage, we may need to claim via the Airbnb Resolution Centre
+
+Please try not to misplace keys; any replacement fees will need to be passed onto our guests.
+
+Strictly no pets allowed.
+
+Thank you very much and we hope you enjoy your stay!</div>
+</div>
                 </div>
               </div>
             </div>
